# O.S.M

./: .gitignore  Makefile  README.md  TEMPLATE_RELEASE_CHECKLIST.md  docker-compose.yml  start_servers.sh  stop_servers.sh
backend/: .env.example  Dockerfile  pyproject.toml  pytest.ini  start.sh  test_celery_setup.py
backend/alembic/: env.py
backend/alembic/versions/: 012cc4845c3b_add_payment_tables.py  181485a25604_fix_casbin_table_name.py  3b7743dd817a_add_casbin_rbac_models.py  6c2aec86ee51_init.py  7f6c1e8a4b2d_add_notification_devices.py  9a6b3c2d4e5f_add_general_settings_table.py  aacc90fb11ce_add_used_token_table.py  b7c1d2e3f4a5_add_observability_tables_and_login_usern.py  e1ecd002528b_add_token_tracking_and_ip_access_.py  eec72f00ab92_add_social_login_fields.py
backend/src/: main.py
backend/src/apps/analytics/: __init__.py  api.py  dependencies.py  events.py  factory.py  interface.py  middleware.py  service.py
backend/src/apps/communications/: __init__.py  interfaces.py  providers.py  service.py  types.py
backend/src/apps/core/: cache.py  celery_app.py  config.py  cookies.py  dependencies.py  handler.py  http.py  logging.py  middleware.py  schemas.py  security.py  settings_store.py  storage.py  tasks.py  utils.py
backend/src/apps/iam/: casbin_enforcer.py  casbin_init.py  casbin_model.conf  tasks.py
backend/src/apps/notification/: tasks.py
backend/src/apps/observability/: api.py  models.py  schemas.py  service.py
backend/src/apps/system/: __init__.py  api.py  schemas.py
backend/src/apps/websocket/: crypto.py  (+2 more)
backend/src/db/: session.py
backend/tests/: conftest.py  factories.py  test_factories.py  test_redis_cache.py
(+362 files in other folders)
